--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <h1>Awesome book</h1>
-    <form action="">
+    <ul id="book-list"></ul>
+    <form action="#">
         <input type="text" name="book_title" id="book_title" placeholder="Book title">
+        <br>
         <input type="text" name="author" id="author" placeholder="Author">
+<br>
         <button type="submit" id="submit">Add</button>
     </form>
     <script src="./index.js">
