--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Awesome book</h1>
-    <ul id="book-list"></ul>
+    <div id="book-list">
+
+    </div>
+
     <form action="#">
         <input type="text" name="book_title" id="book_title" placeholder="Book title">
         <br>
