--- a/index.html
+++ b/index.html
@@ -14,26 +14,8 @@
         <button class="active-btn">List</button><button>Add new</button
         ><button>Contact</button>
       </div>
-      <h3 id="last-modified">March 19th 2021, 9:25:32 am</h3>
+      <h5 id="last-modified"></h5>
     </nav>
-
-    <div class="container">
-      <h1>Awesome book</h1>
-      <div id="book-list"></div>
-
-      <form action="#">
-        <input
-          type="text"
-          name="book_title"
-          id="book_title"
-          placeholder="Book title"
-        />
-        <br />
-        <input type="text" name="author" id="author" placeholder="Author" />
-        <br />
-        <button type="submit" id="submit">Add</button>
-      </form>
-    </div>
     <script src="./index.js"></script>
     <footer><span>Copyright ...</span></footer>
   </body>
