Remove Linters Errors

--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
     </section>
     <section id="contact-us">
         <h2 class="h2-contact">Contact information</h2>
-        <p>
-            Do have any question or you just want to say "Hello"?</br>
-            You can reach out to us!
-        </p>
+        <p>Do have any question or you just want to say "Hello"?</p> 
+        <p>You can reach out to us!</p>
         <ul class="ul-contact">
             <li>Our email: vegeta@gmail.com</li>
             <li>Our phone number: 0065793922084</li>
